<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView" >


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relative"
    tools:context="first.task.yalantis.yalantischallenge.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="@dimen/textSize"
        android:id="@+id/textHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/textStatus"
        android:textColor="@android:color/black"
        android:onClick="onEveryClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/textStatus"
        android:textSize="@dimen/smallTextSize"
        android:background="@drawable/rectangle_rounded"
        android:layout_alignTop="@+id/textHeader"
        android:gravity="center"
        android:layout_alignBottom="@+id/textHeader"
        android:layout_alignLeft="@+id/textCreatedDate"
        android:layout_alignRight="@+id/textCreatedDate"
        android:textColor="@android:color/white"
        android:onClick="onEveryClick" />

    <TextView
        style="@style/textViewTitle"
        android:text="@string/created"
        android:id="@+id/textCreated"
        android:layout_below="@+id/textHeader" />

    <TextView
        style="@style/textViewDescription"
        android:text="@string/createdDate"
        android:id="@+id/textCreatedDate"
        android:layout_alignTop="@+id/textCreated" />

    <View
        style="@style/separator"
        android:layout_below="@+id/textCreated"
        android:id="@+id/viewUnderCreated" />

    <TextView
        style="@style/textViewTitle"
        android:text="@string/registered"
        android:id="@+id/textRegistered"
        android:layout_below="@+id/viewUnderCreated" />

    <TextView
        style="@style/textViewDescription"
        android:text="@string/registeredDate"
        android:id="@+id/textRegisteredDate"
        android:layout_alignTop="@+id/textRegistered" />

    <View
        style="@style/separator"
        android:layout_below="@+id/textRegistered"
        android:id="@+id/viewUnderRegistered" />

    <TextView
        style="@style/textViewTitle"
        android:text="@string/resolve"
        android:id="@+id/textResolveUpTo"
        android:layout_below="@+id/viewUnderRegistered" />

    <TextView
        style="@style/textViewDescription"
        android:text="@string/resolveDate"
        android:id="@+id/textEndDate"
        android:layout_alignTop="@+id/textResolveUpTo" />

    <View
        style="@style/separator"
        android:layout_below="@+id/textResolveUpTo"
        android:id="@+id/viewUnderResolveUpTo" />

    <TextView
        style="@style/textViewTitle"
        android:text="@string/company"
        android:id="@+id/textCompany"
        android:layout_below="@+id/viewUnderResolveUpTo" />

    <TextView
        style="@style/textViewDescription"
        android:text="@string/companyName"
        android:textSize="@dimen/smallTextSize"
        android:id="@+id/textCompanyName"
        android:layout_alignTop="@+id/textCompany" />

    <View
        style="@style/separator"
        android:layout_below="@+id/textCompany"
        android:id="@+id/viewUnderCompany" />

    <TextView
        style="@style/textViewDescription"
        android:text="@string/description"
        android:id="@+id/textDescription"
        android:layout_below="@+id/viewUnderCompany"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/bigMargin" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layout_below="@+id/textDescription"
        android:onClick="onEveryClick">


    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
</ScrollView>
